# openmarketui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  justfile  package.json  turbo.json
.figma/: design-system-rules.md
.interface-design/: system.md
compost/: README.md
compost/osint/: analyzer.py  main.py  models.py  requirements.txt  signal_writer.py  telegram_listener.py
crates/omu/: Cargo.toml
crates/omu/src/: cli.rs  client.rs  error.rs  main.rs  output.rs  settings.rs  types.rs
crates/omu/src/commands/: audit.rs  auth.rs  backtest.rs  config.rs  daemon.rs  ingest.rs  markets.rs  mod.rs  pipeline.rs  portfolio.rs  positions.rs  profiles.rs  sessions.rs  trades.rs
crates/pm-core/: Cargo.toml
crates/pm-core/src/: exit.rs  lib.rs  portfolio.rs  signal.rs  traits.rs  types.rs
crates/pm-engine/: Cargo.toml
crates/pm-engine/src/: circuit_breaker.rs  execution.rs  fees.rs  lib.rs
crates/pm-garden/: Cargo.toml
crates/pm-garden/src/: lib.rs  pipeline.rs  registry.rs
crates/pm-garden/src/beds/: mod.rs
crates/pm-garden/src/beds/advanced/: entropy.rs  granger.rs  kalman.rs  mod.rs  momentum_accel.rs  regime.rs  volatility.rs
crates/pm-garden/src/beds/kalshi/: ensemble.rs  mean_reversion.rs  mod.rs  momentum.rs  osint.rs  volume.rs
crates/pm-garden/src/filters/: mod.rs
crates/pm-kalshi/: Cargo.toml
crates/pm-kalshi/src/: backtest.rs  lib.rs  main.rs  metrics.rs
crates/pm-kalshi/src/api/: client.rs  mod.rs  types.rs
crates/pm-kalshi/src/config/: mod.rs
crates/pm-kalshi/src/data/: fetcher.rs  loader.rs  mod.rs  parquet_loader.rs
crates/pm-kalshi/src/engine/: mod.rs  state.rs  trading.rs
crates/pm-kalshi/src/pipeline/: mod.rs  selector.rs  trading_pipeline.rs
crates/pm-kalshi/src/sources/: historical.rs  live.rs  mod.rs  paper_executor.rs
crates/pm-kalshi/src/web/: garden.rs  handlers.rs  mod.rs  ws.rs
crates/pm-server/: Cargo.toml
crates/pm-server/src/: lib.rs  routes.rs  state.rs  ws.rs
crates/pm-store/: Cargo.toml
crates/pm-store/src/: lib.rs  queries.rs  schema.rs
data/: fetch_state_v2.json
docs/: DATA_FETCH_IMPLEMENTATION_PLAN.md  README.md  SPEC.md  pm-kalshi-algorithm.md  safety-critical-programming-theory.md  sharp-action-event-log.md
docs/explanation/: backtesting-methodology.md  garden-metaphor.md  pipeline-architecture.md  position-sizing.md
docs/how-to/: add-a-filter.md  configure-exit-rules.md  deploy-web.md  ingest-historical-data.md  monitor-with-watchtower.md  tune-circuit-breaker.md
docs/reference/: cli-reference.md  config-toml.md  core-types.md  pipeline-traits.md  scorers-and-filters.md  watchtower-ui.md
docs/tutorials/: 01-first-backtest.md  02-building-a-custom-scorer.md  03-setting-up-paper-trading.md
docs/wip/: osint-pipeline.md  phase-one-daemon-cli-parity.md
tools/: fetch_kalshi_data.py  fetch_kalshi_data_v2.py  train_ml_models.py
watchtower/: README.md  REFERENCE-LONGBRIDGE.md  THEMES_SPEC.md  TRADING_SESSIONS_IMPLEMENTATION_PLAN.md  package.json
watchtower/src/: app.tsx  index.tsx
watchtower/src/components/layout/: BacktestProgress.tsx  CommandMenu.tsx  ConfigEditor.tsx  DataManager.tsx  DateRangePicker.tsx  Header.tsx  ModeSelector.tsx  PresetPicker.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  ThemePicker.tsx  index.ts
watchtower/src/components/shared/: Badge.tsx  Gauge.tsx  Histogram.tsx  Panel.tsx  Table.tsx  index.ts
watchtower/src/components/tabs/: CurrentHarvest.tsx  DataCollector.tsx  DecisionFeed.tsx  GardenOverview.tsx  GreenhouseControls.tsx  HarvestHistory.tsx  ScorerDrilldown.tsx  SessionControlStrip.tsx  TradingRhythm.tsx  TransactionTimeline.tsx  index.ts
watchtower/src/config/: colors.ts  keybindings.ts  persist.ts  presets.ts
watchtower/src/hooks/: index.ts  useColors.ts  useGardenStore.ts  useKeyboardNav.ts  useModeStore.ts  useTerminalSize.ts  useThemeStore.ts  useWebSocket.ts
watchtower/src/themes/: derive.ts  registry.ts  terminal.ts  types.ts
watchtower/src/types/: alerts.ts  engine.ts  garden.ts  index.ts  mode.ts  ws.ts
watchtower/src/utils/: dataProgress.ts  format.ts
watchtower/src/wire/: index.ts  normalize.ts
web/: README.md  astro.config.mjs  package.json  wrangler.jsonc
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
web/src/styles/: global.css
