[workspace]
resolver = "2"
members = [
    "crates/pm-core",
    "crates/pm-store",
    "crates/pm-garden",
    "crates/pm-engine",
    "crates/pm-server",
    "crates/pm-kalshi",
    "crates/omu",
]
exclude = [
    "compost/kalshi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# time
chrono = { version = "0.4", features = ["serde"] }

# numerics
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"

# error handling
anyhow = "1"
thiserror = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# data
parquet = { version = "54", default-features = false, features = ["arrow", "snap"] }
arrow = { version = "54", default-features = false, features = ["chrono-tz"] }

# misc
uuid = { version = "1", features = ["v4"] }
