[package]
name = "omu"
description = "OpenMarketUI daemon-attached CLI"
version.workspace = true
edition.workspace = true

[[bin]]
name = "omu"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true

clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
toml.workspace = true
